kube-vip.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kube-vip
  namespace: kube-system
  labels:
    app.kubernetes.io/name: kube-vip
spec:
  containers:
    - name: kube-vip
      image: ghcr.io/kube-vip/kube-vip:v0.8.0
      args:
        - manager
        - --interface=eth0
        - --address=127.0.0.1
        - --arp
        - --controlplane
      securityContext:
        capabilities:
          add:
            - NET_ADMIN
            - NET_RAW
        privileged: true
  hostNetwork: true
